2016-08-01  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftbench] Use POSIX timers when available.

	* src/ftbench.c (get_time): Use `clock_gettime' instead of obsolete
	and less accurate `gettimeofday'.
	(benchmark): Updated. 

2016-07-14  Werner Lemberg  <wl@gnu.org>

	[ftgrid] New option `-d' to give start-up design coordinates.

	This code is similar to the one from `ftmulti'.

	* src/ftgrid.c: Include `stdlib.h'.
	(GridStatusRec): Add `requested_pos' and `reqested_cnt' to hold the
	design coordinate data from the command line.
	(event_font_change): Handle them.
	(parse_cmdline): Handle option `-d'.
	(usage): Document `-d'.
	(main): Don't load named instances if we have start-up design
	coordinates.

	* src/ftgrid.1: Updated.

2016-07-14  Werner Lemberg  <wl@gnu.org>

	Prepare suppression of named instances.

	No functional change.

	* src/ftcommon.c (FTDemo_Install_Font): Add boolean parameter to
	avoid loading of instances.
	* src/ftcommon.h: Updated.
	* src/ftgrid.c (main), src/ftstring.c (main), src/ftview.c (main):
	Updated.

2016-07-14  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Properly handle named instances.

	* src/ftgrid.c (event_font_change): Properly initialize the design
	positions with the named instance's value, if appropriate.

2016-07-12  Werner Lemberg  <wl@gnu.org>

	* Version 2.6.5 released.
	=========================


	Tag sources with `VER-2-6-5'.

	* README: Updated.
	* src/*.1: Updated.
	* src/ftinspect.pro: Updated.

2016-07-05  Werner Lemberg  <wl@gnu.org>

	* Version 2.6.4 released.
	=========================


	Tag sources with `VER-2-6-4'.

	* README: Updated.
	* src/*.1: Updated.
	* src/ftinspect.pro: Updated.

2016-06-26  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Fix pixel box drawing.

	This commit circumvents a problem with Qt's `QPainter::drawImage'
	function; it seems that the alignment of the output becomes
	imprecise at high magnification values.

	* src/ftinspect.c (GlyphBitmap::paint): Manually draw pixel boxes