@@ -1,3 +1,7 @@
+2016-08-02  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
+	* src/ftbench.c (get_time, benchmark): Clean up timers.
+
 2016-08-01  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
 	[ftbench] Use POSIX timers when available.
